# qmk_view

./: .gitignore  Cargo.toml  README.md  check_hid.sh  config.example.json  create-bundle.sh  debug_hid.rs  default.nix  qmk_integration_example.c  shell.nix
qmkview-core/: Cargo.toml
qmkview-core/src/: config.rs  lib.rs  qmk_parser.rs
qmkview-core/src/hid/: mod.rs  protocol.rs  reader.rs
qmkview-core/src/keyboard/: layers.rs  layout.rs  mod.rs  state.rs
qmkview-gui/: Cargo.toml
qmkview-gui/src/: app.rs  keyboard_view.rs  lib.rs  overlay.rs
src/: main.rs
