[package]
name = "qmkview-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
